# SecCheck.js

./: .gitignore  banana.txt  dune-project  ltl2dfa.py  requirements.txt  sec-check-js.opam  trusted-cpg.ml  trusted-cpg.opam
example_formulas/: code_injection.fomula  flatten.formula  gdpr.formula  prototype_pollution.formula
example_properties/: code_injection.json  code_injection.prop  proto_polluted_injection.ltlf  proto_polluted_injection.prop  proto_polluted_injection_paper.json  proto_polluted_injection_paper.prop  prototype_pollution.json  prototype_pollution.prop  sql_injection.json  sql_injection.prop
program_automata/: example1.cmdg  example1.js  example1.json  example2.cmdg  example2.js  example2.json  example3.cmdg  example3.js  example3.json  example4.cmdg  example4.js  example4.json  example_paper.js  example_paper.json  example_paper_simpl.json
src/: dune
src/base/: dune
src/semantics/: dune
src/semantics/core/parser/: dune  lexer.mll  parser.mly  parsing.ml
src/semantics/core/query/parser/: lexer.mll  parser.mly  parsing.ml
src/semantics/core/verification/: verification.ml
src/semantics/utils/: code_utils.ml  date_utils.ml  parsing_utils.ml
src/syntax/: dune
src/syntax/core/: action.ml  binrelop.ml  expr.ml  formula.ml  invformula.ml  predicate.ml  security.ml  trace.ml  value.ml
src/syntax/core/program/: paction.ml  pautomaton.ml  ploc.ml  ppred.ml  program.ml  ptrace.ml  ptransition.ml  transition.ml
src/syntax/core/query/: invformula.ml  qaction.ml  qautomaton.ml  qpred.ml  qtransition.ml  query.ml  qvar.ml  trcformula.ml
