(include_subdirs unqualified)

(library
  (public_name trusted-cpg.lib)
  (name TcpgSemantics)
  (modules
    ; core
    verification
    ; query parser
    lexer
    parser
    parsing
    ; utils
    re
    code_utils
    parsing_utils
    string_utils)
  (preprocess
    (staged_pps ppx_import ppx_deriving.std))
  (libraries
    TcpgBase
    TcpgSyntax
    prelude
    menhirLib
    str))
