(include_subdirs unqualified)

(library
  (public_name sec-check-js.lib)
  (name SecCheckJSSemantics)
  (modules
    ; core
    verification
    ; query parser
    lexer
    parser
    parsing
    ; utils
    re
    code_utils
    parsing_utils
    string_utils)
  (preprocess
    (staged_pps ppx_import ppx_deriving.std))
  (libraries
    SecCheckJSBase
    SecCheckJSSyntax
    prelude
    menhirLib
    str))
