(include_subdirs unqualified)

(library
  (public_name trusted-cpg.syntax)
  (name TcpgSyntax)
  (libraries TcpgBase fmt prelude)
  (modules
    ; share
    source
    ; core
    expr
    formula
    value
    ; program
    paction
    program
    transition
    ; query
    qaction
    query)
  (preprocess (pps ppx_deriving_yojson)))
