(include_subdirs unqualified)

(library
  (public_name trusted-cpg.syntax)
  (name TcpgSyntax)
  (libraries TcpgBase fmt prelude)
  (modules
    ; share
    source
    ; core
    expr
    invformula
    value
    ; program
    paction
    ptransition
    pautomaton
    ; query
    trcformula
    qaction
    qtransition
    query
    qautomaton
    )
  (preprocess (pps ppx_deriving_yojson)))
