(include_subdirs unqualified)

(library
  (public_name sec-check-js.syntax)
  (name SecCheckJSSyntax)
  (libraries SecCheckJSBase fmt prelude)
  (modules
    ; share
    source
    ; core
    value
    ; program
    ploc
    ppred
    paction
    ptransition
    pautomaton
    ; query
    qvar
    qpred
    qaction
    qtransition
    invformula
    trcformula
    query
    qautomaton
    )
  (preprocess (pps ppx_deriving_yojson)))
